--- a/inspector/web/components/app-root.css
+++ b/inspector/web/components/app-root.css
@@ -7,8 +7,9 @@ app-root {
 
 app-root main {
   flex-grow: 1;
-  overflow: auto;
+  overflow: hidden;
   display: grid;
   grid-template-areas: 'sidebar viewer history';
-  grid-template-columns: auto 1fr auto;
+  grid-template-columns: minmax(0, 350px) 1fr minmax(0, 350px);
+  min-height: 0;
 }
